Prevent the text beneath invisible button jumping
[#172649479]

--- a/src/components/video/buttons/videoCollection/ManageVideoCollectionMenuContainer.less
+++ b/src/components/video/buttons/videoCollection/ManageVideoCollectionMenuContainer.less
@@ -1,3 +1,4 @@
 .invisibleButton {
   visibility: hidden;
+  height: 0px;
 }
